Recomeçando ao fim da aula 128.
Funcionando até aqui. Refazer a partir da aula 129 com mais atenção.

--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,8 @@
 # Default number of objects per page
-PER_PAGE=9
+PER_PAGE = 9
 
 # Django secret key
-SECRET_KEY='PUT A SECRET KEY HERE'
+SECRET_KEY = 'CHANGE-ME'
 
-# 0=False | 1=True
-DEBUG=1
+# 0 = False - 1 = True
+DEBUG = 0
